src/test/deca/context/invalid/avecObjet/is_instance_of_lvalue.deca
// Description :
//    opérateur instanceof avec lvalue incorrecte
//
// Resultats :
//    Erreur contextuelle
//    Ligne 10 : L'opérateur instanceof s'applique à un objet, pas à int

{
    int i = 5;
    if (i instanceof Object) {
        println("KO");
    }
}